--- a/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
+++ b/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
@@ -1,4 +1,4 @@
-FROM exaudf/baseimage_python3_60
+FROM exaudf/baseimage_python3-ds-exasol-6.0.0
 
 RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 
