--- a/flavors/python3-ds-EXASOL-6.1.0/Dockerfile.test_python3-ds-EXASOL-6.1.0
+++ b/flavors/python3-ds-EXASOL-6.1.0/Dockerfile.test_python3-ds-EXASOL-6.1.0
@@ -1,11 +1,11 @@
-FROM exaudf/release_standard_61
+FROM exaudf/release_python3-ds-exasol-6.1.0
 
 RUN mkdir /exasol_emulator
 
 COPY emulator/ /exasol_emulator
 COPY src/zmqcontainer.proto /exasol_emulator
 
-RUN     apt-get -y install python-protobuf python-zmq gdb valgrind
+RUN     apt-get -y install python-protobuf python-zmq gdb
 
 RUN cd /exasol_emulator && protoc zmqcontainer.proto --python_out=.
 RUN ls /exasol_emulator
