updated flavor: python3-ds-EXASOL-6.1.0

--- a/flavors/python3-ds-EXASOL-6.1.0/Dockerfile.base_python3-ds-EXASOL-6.1.0
+++ b/flavors/python3-ds-EXASOL-6.1.0/Dockerfile.base_python3-ds-EXASOL-6.1.0
@@ -18,20 +18,27 @@ RUN apt-get -y update && \
         scons \
         libssl-dev \
         wget \
+	curl \
         unzip \
- 	swig \
         python3-pip \
         python3-tk \
         libpcre3-dev && \
-    wget https://files.pythonhosted.org/packages/85/d1/69ee7e757f657e7f527cbf500ec2d295396e5bcec873cf4eb68962c41024/statsmodels-0.9.0-cp36-cp36m-manylinux1_x86_64.whl && \
+    wget prdownloads.sourceforge.net/swig/swig-2.0.4.tar.gz && \
+    tar zxf swig-2.0.4.tar.gz && \
+    (cd swig-2.0.4 && ./configure --prefix=/usr && make && make install) && \
+    rm -rf swig-2.0.4 swig-2.0.4.tar.gz 
+RUN apt-get -y install cython3 libcurl4-openssl-dev
+run wget https://files.pythonhosted.org/packages/85/d1/69ee7e757f657e7f527cbf500ec2d295396e5bcec873cf4eb68962c41024/statsmodels-0.9.0-cp36-cp36m-manylinux1_x86_64.whl && \
     pip3 install statsmodels-0.9.0-cp36-cp36m-manylinux1_x86_64.whl && \
     rm -f statsmodels-0.9.0-cp36-cp36m-manylinux1_x86_64.whl && \
-    pip3 install keras tensorflow kmodes seaborn matplotlib imbalanced-learn lifelines nltk gensim && \
+    pip3 install keras tensorflow kmodes seaborn matplotlib imbalanced-learn lifelines nltk gensim lxml ujson && \
     locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
     apt-get -y autoremove && \
     ldconfig
+RUN apt-get --yes  remove python3-pycurl
+RUN python3.6 -m pip install --ignore-installed pycurl
 RUN addgroup --gid 1000 exasolution
 RUN adduser --disabled-login --uid 1000 --gid 1000 exasolution
 
