--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
     env: MATRIX_FLAVOR=python3-ds-EXASOL-6.0.0 GENERIC_TEST_LANG=java TEST_FOLDER=java
   - name: python3-ds-EXASOL-6.0.0-python3
     env: MATRIX_FLAVOR=python3-ds-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python3
+  - name: python3-ds-EXASOL-6.1.0-python3
+    env: MATRIX_FLAVOR=python3-ds-EXASOL-6.1.0 GENERIC_TEST_LANG=python TEST_FOLDER=python3
   - name: standard-EXASOL-6.1.0-python
     env: MATRIX_FLAVOR=standard-EXASOL-6.1.0 GENERIC_TEST_LANG=python TEST_FOLDER=python
   - name: standard-EXASOL-6.1.0-r
