changes to travis environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ services:
     - docker
 
 install:
-#  - sudo apt-get update 
-  - sudo apt-get install unixodbc unixodbc-dev
+  - sudo apt-get -y update
+  - sudo apt-get -u upgrade
+  - sudo apt-get -y install unixodbc unixodbc-dev
 
 
 matrix:
