--- a/flavors/fancyr-EXASOL-6.0.0/Dockerfile.base_fancyr-EXASOL-6.0.0
+++ b/flavors/fancyr-EXASOL-6.0.0/Dockerfile.base_fancyr-EXASOL-6.0.0
@@ -1,11 +1,12 @@
 FROM ubuntu:16.04
 ARG numberOfCores
 
+
 COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc 
 
 RUN apt-get -y update && \
     apt-get -y install software-properties-common && \
-    add-apt-repository ppa:marutter/rrutter3.5 && \
+    add-apt-repository -y ppa:marutter/rrutter3.5 && \
     apt-get -y update && \
     DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install \
         coreutils \
@@ -13,19 +14,17 @@ RUN apt-get -y update && \
         python-dev  \
         libzmq3-dev \
         protobuf-compiler \
-        r-base \
-        r-base-dev \
+        r-base r-base-core r-base-dev \
+	libxml2-dev libcurl4-openssl-dev libssl-dev \
 	libxml2-dev \
         libprotobuf-dev \
         build-essential \
-        vim \
         wget \
         gfortran \
         libssl-dev \
         unzip \
         curl \
-        libcurl4-openssl-dev  \
-        ed openjdk-9-jdk-headless \
+        openjdk-9-jdk-headless \
         libnss-db  && \
     wget prdownloads.sourceforge.net/swig/swig-2.0.4.tar.gz && \
     tar zxf swig-2.0.4.tar.gz && \
@@ -39,10 +38,10 @@ RUN apt-get -y update && \
     addgroup --gid 1000 exasolution && \
     adduser --disabled-login --uid 1000 --gid 1000 exasolution --gecos "First Last,RoomNumber,WorkPhone,HomePhone"
 
-RUN Rscript -e 'install.packages(c("RcppArmadillo","rredis", "data.table", "htmltools", "flashClust", "forecast", "np","abind","assertthat","backports","base64enc","BH","bindr","bindrcpp","bitops","Brobdingnag","broom","callr","car","carData","caTools","cellranger","classInt","clustMixType","combinat","crosstalk","DBI","dbplyr","doParallel","dplyr","e1071","evaluate","forcats","foreach","gdata","glmnet","gmodels","gplots","gtools","haven","hexbin","highr","hms","htmlwidgets","httpuv","httr","imputeTS","ISLR","iterators","jsonlite","KernSmoothIRT","klaR","knitr","labelled","later","lme4","LowRankQP","lubridate","manipulateWidget","maptools","markdown","MASS","mime","miniUI","minqa","mnormt","modelr","MPTinR","multcomp","mvtnorm","nloptr","numDeriv","openssl","openxlsx","pbkrtest","pkgconfig","plogr","plotly","plotrix","praise","processx","promises","psych","purrr","randomForest","RcppEigen","readr","readxl","rematch","reprex","rgl","rio","rmarkdown","ROSE","rprojroot","rstudioapi","rvest","sandwich","selectr","shiny","sourcetools","sp","spData","stinepack","survival","testthat","TH.data","tidyr","tidyselect","tidyverse","tinytex","tree","webshot","whisker","xml2","xtable","yaml","zip","translations","igraph","caret","kernlab","ROCR","gbm","party","arules","RWeka","ipred","lars","earth","CORElearn","mboost"), repos = "http://cran.r-project.org", clean = TRUE, Ncpus = '"$numberOfCores"')'
+
+RUN Rscript -e 'install.packages(c("BH","Brobdingnag","CORElearn","DBI","ISLR","KernSmoothIRT","LowRankQP","MASS","MPTinR","RCurl","ROCR","ROSE","RWeka","RcppArmadillo","RcppEigen","TH.data","abind","arules","assertthat","backports","base64enc","bindr","bindrcpp","bitops","broom","caTools","callr","car","carData","caret","cellranger","classInt","clustMixType","combinat","crosstalk","data.table","dbplyr","doParallel","dplyr","e1071","earth","evaluate","flashClust","forcats","foreach","forecast","gbm","gdata","glmnet","gmodels","gplots","gtools","haven","hexbin","highr","hms","htmltools","htmlwidgets","httpuv","httr","igraph","imputeTS","ipred","iterators","jsonlite","kernlab","klaR","knitr","labelled","lars","later","lme4","lubridate","manipulateWidget","maptools","markdown","mboost","mime","miniUI","minqa","mnormt","modelr","multcomp","mvtnorm","nloptr","np","numDeriv","openssl","openxlsx","party","pbkrtest","pkgconfig","plogr","plotly","plotrix","praise","processx","promises","psych","purrr","randomForest","ranger","readr","readxl","rematch","reprex","rgl","rio","rmarkdown","rprojroot","rredis","rstudioapi","rvest","sandwich","selectr","shiny","sourcetools","sp","spData","stinepack","survival","testthat","tidyr","tidyselect","tidyverse","tinytex","tree","webshot","whisker","XML","xml2","xtable","yaml","zip"), repos = "http://cran.r-project.org", clean = TRUE, Ncpus = "$numberOfCores")'
+
+
 ENV LANG en_US.UTF-8  
 ENV LANGUAGE en_US:en  
 ENV LC_ALL en_US.UTF-8  
-
-
-
