--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ install:
 
 matrix:
   include:
-  - name: mini-python-python
-    env: MATRIX_FLAVOR=mini GENERIC_TEST_LANG=python TEST_FOLDER=python
+  - name: miniEXASOL-6.0.0-python-python
+    env: MATRIX_FLAVOR=mini-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python
   - name: standard-EXASOL-6.0.0-python
     env: MATRIX_FLAVOR=standard-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python
   - name: standard-EXASOL-6.0.0-r
