add rcontainer, benchmark_container to bazel build and fixed compile errors in benchmark_container

--- a/src/BUILD
+++ b/src/BUILD
@@ -44,6 +44,14 @@ cc_library(
 cc_library(
     name = "streamingcontainer",
     srcs = ["streamingcontainer.cc","streamingcontainer.h"],
+    
+    deps = [":exaudflib"]
+)
+
+cc_library(
+    name = "benchmark_container",
+    srcs = ["benchmark_container.cc","benchmark_container.h"],
+    hdrs = ["benchmark_container.h"],
     deps = [":exaudflib"]
 )
 
@@ -70,7 +78,6 @@ genrule(
     tools = ["extend_exascript_python_preset_py.sh"]
 )
 
-#cp "$(location exascript_python_preset.py)" "exascript_python_preset.py"
 genrule(
     name = "python2_7_exascript_python_int",
     cmd = 'cp "$(location python2_7_extend_exascript_python_preset_py)" "exascript_python_preset.py" && python ./build_integrated.py "$(location exascript_python_int.h)" "exascript_python.py" "exascript_python_wrap.py" "exascript_python_preset.py"',
@@ -112,12 +119,68 @@ cc_library(
     deps = ["@python_2_7_linux//:python27-lib",":exaudflib",":python2_7_exascript_python", ":scriptoptionlines"]
 )
 
+##########################################################
+genrule(
+    name = "exascript_r_tmp_cc",
+    cmd = 'swig -v -O -DEXTERNAL_PROCESS -Wall -c++ -r -addextern -module exascript_r -o "$(location exascript_r_tmp.cc)" "$(location exascript.i)"',
+    outs = ["exascript_r_tmp.cc","exascript_r.R"],
+    srcs = ["exascript.i","script_data_transfer_objects_wrapper.h"]
+)
 
-# LIBS="-lpython2.7 $LIBS"
-# LDFLAGS="-L$PYTHON_PREFIX/lib -Wl,-rpath,$PYTHON_PREFIX/lib $LDFLAGS" 
+genrule(
+    name = "exascript_r_tmp_h",
+    cmd = 'swig -DEXTERNAL_PROCESS -c++ -r -external-runtime "$(location exascript_r_tmp.h)"',
+    outs = ["exascript_r_tmp.h"],
+    srcs = ["exascript.i","script_data_transfer_objects_wrapper.h", ":python2_7_exascript_python_tmp_cc"]
+)
 
-# echo "Compiling Python specific code"
-# g++ -o exascript_python.o -c exascript_python.cc $CXXFLAGS -Wno-unused-but-set-variable || die "Failed to compile exascript_python.o"
-# g++ -o pythoncontainer.o -c pythoncontainer.cc $CXXFLAGS || die "Failed to compile pythoncontainer.o"
+genrule(
+    name = "exascript_r_int",
+    cmd = 'cp $(locations :exascript_r_tmp_cc) . && python ./build_integrated.py "$(location exascript_r_int.h)" exascript_r.R"" "exascript_r_wrap.R" "exascript_r_preset.R"',
+    outs = ["exascript_r_int.h"],
+    srcs = ["exascript_r_wrap.R", "exascript_r_preset.R", ":exascript_r_tmp_cc"],
+    tools = ["build_integrated.py"]
+)
 
-# CONTAINER_CLIENT_OBJECT_FILES="exascript_python.o pythoncontainer.o $CONTAINER_CLIENT_OBJECT_FILES"
+genrule(
+    name = "filter_swig_code_exascript_r_h",
+    cmd = 'python ./filter_swig_code.py "$@" "$<"',
+    outs = ["exascript_r.h"],
+    srcs = [":exascript_r_tmp_h"],
+    tools = ["filter_swig_code.py"]
+)
+
+genrule(
+    name = "filter_swig_code_exascript_r_cc",
+    cmd = 'cp $(locations :exascript_r_tmp_cc) . && python ./filter_swig_code.py "$@" "exascript_r_tmp.cc"',
+    outs = ["exascript_r.cc"],
+    srcs = [":exascript_r_tmp_cc"],
+    tools = ["filter_swig_code.py"]
+)
+
+
+cc_library(
+    name = "exascript_r",
+    srcs = [":filter_swig_code_exascript_r_cc",":filter_swig_code_exascript_r_h"],
+    hdrs = [":filter_swig_code_exascript_r_h"],
+    copts = ["-DENABLE_R_VM"],
+    deps = ["@R_linux//:r-lib",":exaudflib"]
+)
+
+cc_library(
+    name = "rcontainer",
+    srcs = ["rcontainer.cc",":exascript_r_int"],
+    data = [":python2_7_extend_exascript_python_preset_py"],
+    copts = ["-DENABLE_R_VM"],
+    deps = ["@R_linux//:r-lib",":exaudflib",":exascript_r", ":scriptoptionlines"]
+)
+
+
+
+genrule(
+  name = "g",
+  srcs = [],
+  outs = ["g.out"],
+  cmd = "echo FOO is equal to $$PYTHON_PREFIX! > $@",
+  #toolchains = [":set_foo_to_bar"]
+)
