--- a/src/WORKSPACE
+++ b/src/WORKSPACE
@@ -26,3 +26,17 @@ cc_library(
     """
 )
 
+new_local_repository(
+    name = "R_linux",
+    path = "/usr",
+    build_file_content = """
+cc_library(
+    name = "r-lib",
+    srcs = glob(["share/R/include/*/*.h","share/R/include/*.h"]),
+    hdrs = glob(["share/R/include/*/*.h","share/R/include/*.h"]),
+    includes = ["share/R/include"],
+    visibility = ["//visibility:public"]
+)
+    """
+)
+
