--- a/src/.bazelrc
+++ b/src/.bazelrc
@@ -1,3 +1,2 @@
---cxxopt='-std=c++14'
---incompatible_remove_native_http_archive=false
---incompatible_package_name_is_a_function=false 
+startup --expand_configs_in_place
+build --cxxopt='-std=c++14' --incompatible_remove_native_http_archive=false --incompatible_package_name_is_a_function=false 
