Fixes, tests, and simplifications
* renamed entry in Travis build matrix

* adaptet debug script to work with new flavor names

* added option --python-version to build script

* removed option --enable-python3 from build script

* changed build-script to using bash instead of sh

* changed build-script to only having one section for python (not one for python2 and another one for python3), thereby fixing a problem with the python-ds-EXASOL-6.0.0 flavor

* removed nosite code from pythoncontainer.cc

* added tests for available packages for the standard containers and the python3-ds containers

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 matrix:
   include:
-  - name: miniEXASOL-6.0.0-python-python
+  - name: mini-EXASOL-6.0.0-python
     env: MATRIX_FLAVOR=mini-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python
   - name: standard-EXASOL-6.0.0-python
     env: MATRIX_FLAVOR=standard-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python
