--- a/flavors/mini-EXASOL-6.0.0/Dockerfile.build_mini-EXASOL-6.0.0
+++ b/flavors/mini-EXASOL-6.0.0/Dockerfile.build_mini-EXASOL-6.0.0
@@ -4,4 +4,4 @@ RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 
 COPY src/ /exaudf_src/
 
-RUN /exaudf_src/build_client.sh --src-dir=/exaudf_src --build-dir=/exaudf_src/build --output-dir=/exaudf --enable-python
+RUN /exaudf_src/build_client.sh --src-dir=/exaudf_src --build-dir=/exaudf_src/build --output-dir=/exaudf --enable-python --python-version=python2
