--- a/src/WORKSPACE
+++ b/src/WORKSPACE
@@ -1,15 +1,32 @@
 
 #load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
-load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
+# load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 
-git_repository(
-  name = "org_pubref_rules_protobuf",
-  remote = "https://github.com/pubref/rules_protobuf",
-  tag = "v0.8.2"
+# git_repository(
+#   name = "org_pubref_rules_protobuf",
+#   remote = "https://github.com/pubref/rules_protobuf",
+#   tag = "v0.8.2"
+# )
+
+# load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cpp_proto_repositories")
+# cpp_proto_repositories()
+
+load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
+http_archive(
+    name = "build_stack_rules_proto",
+    urls = ["https://github.com/stackb/rules_proto/archive/d86ca6bc56b1589677ec59abfa0bed784d6b7767.tar.gz"],
+    sha256 = "36f11f56f6eb48a81eb6850f4fb6c3b4680e3fc2d3ceb9240430e28d32c47009",
+    strip_prefix = "rules_proto-d86ca6bc56b1589677ec59abfa0bed784d6b7767",
 )
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cpp_proto_repositories")
-cpp_proto_repositories()
+load("@build_stack_rules_proto//cpp:deps.bzl", "cpp_proto_compile")
+
+cpp_proto_compile()
+
+load("@build_stack_rules_proto//cpp:deps.bzl", "cpp_proto_library")
+
+cpp_proto_library()
 
 load("//:repositories.bzl", "python27_local_repository")
 python27_local_repository(name = "python_2_7_linux")
