--- a/src/.bazelrc
+++ b/src/.bazelrc
@@ -1,2 +1,3 @@
 startup --expand_configs_in_place
-build --subcommands --action_env=PYTHON_PREFIX --action_env=CUSTOM_PROTOBUF_PREFIX --cxxopt='-std=c++14' --incompatible_remove_native_http_archive=false --incompatible_package_name_is_a_function=false 
+#build --incompatible_remove_native_http_archive=false --incompatible_package_name_is_a_function=false --subcommands --action_env=PYTHON_PREFIX --action_env=CUSTOM_PROTOBUF_PREFIX --cxxopt='-std=c++14' 
+build --subcommands --action_env=PYTHON_PREFIX --action_env=CUSTOM_PROTOBUF_BIN --cxxopt='-std=c++14' 
