move rcontainer build to own directory, linked python2, r, streaming and benchmark language to exaudfclient, add debug messages macros, clean up build starter scripts and .bazelrc, extract libexaudflib path to compiler flag, improved dependency visualization scripts

--- a/flavors/benchmark/Dockerfile.build_benchmark
+++ b/flavors/benchmark/Dockerfile.build_benchmark
@@ -8,4 +8,4 @@ RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 
 COPY src/ /exaudf_src/
 
-RUN cd /exaudf_src/ && bash build_commandline && cp -r -L bazel-bin/* /exaudf
+RUN cd /exaudf_src/ && bash build_in_container.sh && cp -r -L bazel-bin/* /exaudf
