--- a/src/BUILD
+++ b/src/BUILD
@@ -1,4 +1,6 @@
 package(default_visibility = ["//visibility:public"])
+exports_files(["filter_swig_code.py", "build_integrated.py", "exascript.i"])
+
 # load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
 
 # proto_library(
@@ -49,113 +51,39 @@ cc_library(
     hdrs = ["script_data_transfer_objects_wrapper.h"]
 )
 
-CUSTOM_PROTOBUF_PREFIX='$$CUSTOM_PROTOBUF_PREFIX'
-
 cc_library(
     name = "exaudflib",
     srcs = ["exaudflib.cc","exaudflib.h"],
     hdrs = ["exaudflib.h"],
     linkstatic = 1,
     deps = [":script_data_transfer_objects_wrapper", ":zmqcontainer", "@zmq//:zmqlib"],
-    #defines = ["CUSTOM_PROTOBUF_PREFIX=\"%s\""%CUSTOM_PROTOBUF_PREFIX]
 )
 
 cc_binary(
     name = "libexaudflib_complete.so",
     linkshared = 1,
     srcs = [":exaudflib", ":zmqcontainer", ":script_data_transfer_objects_wrapper", ":script_data_transfer_objects"],
-    deps = [ "@zmq//:zmqlib"]
+    deps = [ "@zmq//:zmqlib"],
 )
 
 cc_binary(
     name = "exaudfclient",
-    srcs = ["exaudfclient.cc","exaudflib.h","script_data_transfer_objects_wrapper.h", "script_data_transfer_objects.h"],
+    srcs = ["exaudfclient.cc","exaudflib.h","script_data_transfer_objects_wrapper.h", "script_data_transfer_objects.h", "debug_message.h"],
     linkopts = ["-ldl"],
-    deps = [":benchmark_container"]
+    deps = [":benchmark_container", ":streamingcontainer", "//python/python2:python2_7_pythoncontainer", "//rcontainer:rcontainer"],
     #defines = ["CUSTOM_PROTOBUF_PREFIX=\"%s\""%CUSTOM_PROTOBUF_PREFIX]
+    data = [":libexaudflib_complete.so"]
 )
 
 cc_library(
     name = "streamingcontainer",
     srcs = ["streamingcontainer.cc","streamingcontainer.h"],
     deps = [":exaudflib"]
-
 )
 
 cc_library(
     name = "benchmark_container",
-    srcs = ["benchmark_container.cc","benchmark_container.h"],
+    srcs = ["benchmark_container.cc","benchmark_container.h", "debug_message.h"],
     hdrs = ["benchmark_container.h"],
     deps = [":exaudflib"]
-)
-
-
-##########################################################
-
-
-##########################################################
-
-genrule(
-    name = "exascript_r_tmp_cc",
-    cmd = 'swig -v -O -DEXTERNAL_PROCESS -Wall -c++ -r -addextern -module exascript_r -o "$(location exascript_r_tmp.cc)" "$(location exascript.i)"',
-    outs = ["exascript_r_tmp.cc","exascript_r.R"],
-    srcs = ["exascript.i","script_data_transfer_objects_wrapper.h"]
-)
-
-genrule(
-    name = "exascript_r_tmp_h",
-    cmd = 'swig -DEXTERNAL_PROCESS -c++ -r -external-runtime "$(location exascript_r_tmp.h)"',
-    outs = ["exascript_r_tmp.h"],
-    srcs = ["exascript.i","script_data_transfer_objects_wrapper.h", ":python2_7_exascript_python_tmp_cc"]
-)
-
-genrule(
-    name = "exascript_r_int",
-    cmd = 'cp $(locations :exascript_r_tmp_cc) . && python ./build_integrated.py "$(location exascript_r_int.h)" exascript_r.R"" "exascript_r_wrap.R" "exascript_r_preset.R"',
-    outs = ["exascript_r_int.h"],
-    srcs = ["exascript_r_wrap.R", "exascript_r_preset.R", ":exascript_r_tmp_cc"],
-    tools = ["build_integrated.py"]
-)
-
-genrule(
-    name = "filter_swig_code_exascript_r_h",
-    cmd = 'python ./filter_swig_code.py "$@" "$<"',
-    outs = ["exascript_r.h"],
-    srcs = [":exascript_r_tmp_h"],
-    tools = ["filter_swig_code.py"]
-)
-
-genrule(
-    name = "filter_swig_code_exascript_r_cc",
-    cmd = 'cp $(locations :exascript_r_tmp_cc) . && python ./filter_swig_code.py "$@" "exascript_r_tmp.cc"',
-    outs = ["exascript_r.cc"],
-    srcs = [":exascript_r_tmp_cc"],
-    tools = ["filter_swig_code.py"]
-)
-
-
-cc_library(
-    name = "exascript_r",
-    srcs = [":filter_swig_code_exascript_r_cc",":filter_swig_code_exascript_r_h"],
-    hdrs = [":filter_swig_code_exascript_r_h"],
-    copts = ["-DENABLE_R_VM"],
-    deps = ["@R_linux//:r-lib",":exaudflib"]
-)
-
-cc_library(
-    name = "rcontainer",
-    srcs = ["rcontainer.cc",":exascript_r_int"],
-    data = [":python2_7_extend_exascript_python_preset_py"],
-    copts = ["-DENABLE_R_VM"],
-    deps = ["@R_linux//:r-lib",":exaudflib",":exascript_r", ":scriptoptionlines"]
-)
-
-
-
-genrule(
-  name = "g",
-  srcs = [],
-  outs = ["g.out"],
-  cmd = "echo FOO is equal to $$PYTHON_PREFIX! > $@",
-  #toolchains = [":set_foo_to_bar"]
 )
