--- a/src/.bazelrc
+++ b/src/.bazelrc
@@ -1,3 +1,2 @@
 startup --expand_configs_in_place
-#build --incompatible_remove_native_http_archive=false --incompatible_package_name_is_a_function=false --subcommands --action_env=PYTHON_PREFIX --action_env=CUSTOM_PROTOBUF_PREFIX --cxxopt='-std=c++14' 
-build --subcommands --action_env=PYTHON_PREFIX --action_env=CUSTOM_PROTOBUF_BIN --cxxopt='-std=c++14' 
+build --action_env=PYTHON_PREFIX --action_env=CUSTOM_PROTOBUF_BIN --cxxopt='-std=c++14' 
