--- a/src/BUILD
+++ b/src/BUILD
@@ -1,21 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 exports_files(["filter_swig_code.py", "build_integrated.py", "exascript.i"])
 
-# load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-
-# proto_library(
-#     name = "zmqcontainer_proto",
-#     srcs = ["zmqcontainer.proto"],
-#     deps = ["@com_google_protobuf//:any_proto"],
-# )
-
-#load("@build_stack_rules_proto//cpp:cpp_proto_compile.bzl", "cpp_proto_compile")
-# load("@build_stack_rules_proto//cpp:cpp_proto_library.bzl", "cpp_proto_library")
-# cpp_proto_library(
-#     name = "zmqcontainer",
-#     deps = [":zmqcontainer_proto"]
-# )
-
 genrule(
     name = "zmqcontainer_proto",
     cmd = """$$CUSTOM_PROTOBUF_BIN -I. $< --cpp_out=. &&
@@ -36,7 +21,6 @@ cc_library(
     hdrs = ["scriptoptionlines.h"],
     srcs = ["scriptoptionlines.cc","scriptoptionlines.h"],
 )
-
 
 cc_library(
     name = "script_data_transfer_objects",
@@ -70,8 +54,7 @@ cc_binary(
     name = "exaudfclient",
     srcs = ["exaudfclient.cc","exaudflib.h","script_data_transfer_objects_wrapper.h", "script_data_transfer_objects.h", "debug_message.h"],
     linkopts = ["-ldl"],
-    deps = [":benchmark_container", ":streamingcontainer", "//python/python2:python2_7_pythoncontainer", "//rcontainer:rcontainer"],
-    #defines = ["CUSTOM_PROTOBUF_PREFIX=\"%s\""%CUSTOM_PROTOBUF_PREFIX]
+    deps = [":benchmark_container", ":streamingcontainer", "//python:pythoncontainer", "//rcontainer:rcontainer"],
     data = [":libexaudflib_complete.so"]
 )
 
