add java part of javacontainer bazel build, left to do is linking jars to c++ and adapt all hard coded paths not only in javacontainer

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,5 +1,5 @@
 package(default_visibility = ["//visibility:public"])
-exports_files(["filter_swig_code.py", "build_integrated.py", "exascript.i"])
+exports_files(["filter_swig_code.py", "build_integrated.py", "exascript.i","LICENSE-exasol-script-api.txt"])
 
 genrule(
     name = "zmqcontainer_proto",
