--- a/flavors/benchmark/Dockerfile.build_benchmark
+++ b/flavors/benchmark/Dockerfile.build_benchmark
@@ -1,11 +1,17 @@
 FROM exaudf/baseimage_benchmark
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y openjdk-8-jdk && \
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y curl openjdk-8-jdk && \
 	echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
 	curl https://bazel.build/bazel-release.pub.gpg | apt-key add - && \
 	apt-get update && apt-get install -y bazel
-RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 
+RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 COPY src/ /exaudf_src/
 
-RUN cd /exaudf_src/ && bash build_in_container.sh && cp -r -L bazel-bin/* /exaudf
+ENV PYTHON_PREFIX /usr 
+ENV PYTHON_VERSION python2.7
+ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
+ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu
+ENV VERBOSE_BUILD "--subcommands --verbose_failures"
+
+RUN cd /exaudf_src/ && bash build.sh --define benchmark=true //:exaudfclient && cp -r -L bazel-bin/* /exaudf
