--- a/src/WORKSPACE
+++ b/src/WORKSPACE
@@ -9,7 +9,7 @@ new_local_repository(
     build_file_content = """
 cc_library(
     name = "r-lib",
-    srcs = glob(["share/R/include/*/*.h","share/R/include/*.h"]),
+    srcs = glob(["lib/R/lib/libR.so"]),
     hdrs = glob(["share/R/include/*/*.h","share/R/include/*.h"]),
     includes = ["share/R/include"],
     visibility = ["//visibility:public"]
